# arrow-flight-sql-postgresql

./: .asf.yaml  .clang-format  .cmake-format.py  .cmake-format.yaml  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Brewfile  CMakeLists.txt  CONTRIBUTING.md  Gemfile  NOTICE.txt  README.md  Rakefile  helper.rb  index.html  meson.build  meson_options.txt
.github/workflows/: doc.yaml  lint.yaml  package.yaml  release.yaml  test.yaml  verify-rc.yaml
0.1.0/: client.html  configuration.html  genindex.html  index.html  install.html  overview.html  release-notes.html  search.html  searchindex.js
0.1.0/_static/scripts/: pydata-sphinx-theme.js
0.1.0/development/: release.html
benchmark/: README.md  graph.rb  insert-copy.cc  insert-flight-sql.rb  insert.cc  insert.hh  markdown.rb  meson.build  run.sh  select-copy.c  select-pandas.py  select-polars.py  select.c  select.rb
benchmark/integer/: CMakeLists.txt  README.md  copy.c  graph.rb  insert.csv  meson.build  prepare-100K.sql  prepare-10M.sql  prepare-1M.sql  prepare-sql.sh  result.csv  select-adbc-flight-sql.rb  select-adbc-postgresql.rb  select-adbc.rb  select.c  select.csv  select.rb  select.sql
benchmark/string/: README.md  insert.csv  prepare-sql.sh  result.csv  select.csv
ci/scripts/: prepare-macos.sh  prepare-ubuntu.sh
current/: client.html  configuration.html  genindex.html  index.html  install.html  overview.html  release-notes.html  search.html  searchindex.js
current/_sources/: configuration.md.txt
current/_sources/development/: release.md.txt
current/_static/: documentation_options.js  switcher.json
current/development/: release.html
dev/: filter-backtrace.rb  prepare-tls.sh  run-postgresql.sh
dev/release/: .env.example  rat_exclude_files.txt  verify-rc.sh
devel/: client.html  configuration.html  genindex.html  index.html  install.html  objects.inv  overview.html  release-notes.html  search.html  searchindex.js
devel/_sources/: install.md.txt  overview.md.txt  release-notes.md.txt
devel/_sources/development/: release.md.txt
devel/_static/: documentation_options.js  switcher.json
devel/development/: release.html
doc/: README.md  index.html  requirements.txt
doc/source/: client.md  conf.py  configuration.md  index.md  install.md  overview.md  release-notes.md
doc/source/_templates/: trademark.html
doc/source/development/: release.md
example/adbc/: authenticate-password.c  meson.build
example/flight-sql/: authenticate-password.cc  meson.build  query-ad-hoc.cc  query-prepared.cc
package/: arrow-flight-sql-postgresql-package-task.rb
package/apt/: test.sh
package/docker/: apache-arrow-flight-sql-enable.sh
package/postgresql-15-pgdg/: Dockerfile
package/postgresql-15-pgdg/apt/debian-bookworm-amd64/: Dockerfile
package/postgresql-15-pgdg/apt/ubuntu-jammy-amd64/: Dockerfile
package/postgresql-15-pgdg/debian/: changelog  copyright
package/postgresql-16-pgdg/: Dockerfile  Rakefile
package/postgresql-16-pgdg/apt/debian-bookworm-amd64/: Dockerfile
package/postgresql-16-pgdg/apt/ubuntu-jammy-amd64/: Dockerfile
package/postgresql-16-pgdg/debian/: control
package/postgresql-17-pgdg/: Dockerfile  Rakefile
package/postgresql-17-pgdg/apt/debian-bookworm-amd64/: Dockerfile
package/postgresql-17-pgdg/apt/ubuntu-noble-amd64/: Dockerfile
package/postgresql-17-pgdg/debian/: control  rules
src/: afs.cc
test/: run.rb  test-flight-sql.rb
test/helper/: sandbox.rb
